# API-workshop

./: .env-prod  README.md  main.py  pyproject.toml  requirements-dev.txt  tests.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  schema.py
tests/: tests.py
