[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["guimarczewski <guimarczewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
taskipy = "^1.12.2"
pytest = "^7.4.4"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn main:app --reload"
test = "pytest -v tests.py"
kill = "kill -9 $(lsof -t -i:8000)"